[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextfit"
version = "0.1.0"
description = "Context window packing optimizer for LLMs — maximize information density while respecting token limits."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Officethree Technologies", email = "dev@officethree.com" },
]
keywords = ["llm", "context-window", "packing", "optimization", "tokens"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/officethree/contextfit"
Repository = "https://github.com/officethree/contextfit"
Issues = "https://github.com/officethree/contextfit/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
